# openclaw_tg_bridge

./: .gitignore  LICENSE  OPENCLAW.md  README.md  create_telethon_session.sh
backend/: pyproject.toml  requirements.txt
backend/openclaw_tg_bridge/: __init__.py  __main__.py  auth.py  auth_qr.py  client.py  config.py  lock.py  server.py  state.py
backend/tests/: __init__.py  test_auth_qr.py  test_client.py  test_config.py  test_lock.py  test_server.py  test_state.py
deploy/: openclaw-tg-bridge.service  openclaw.json.example  policy.json.example
plugin/: index.test.mjs  index.ts  openclaw.plugin.json  package-lock.json  package.json
plugin/skills/telegram-user/: SKILL.md
skills/telegram-user-bridge-setup/: SKILL.md
