[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-tg-bridge"
version = "0.1.0"
description = "Telethon HTTP bridge for OpenClaw (live Telegram user account)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "telethon>=1.36.0,<2",
    "fastapi>=0.115.0,<1",
    "uvicorn[standard]>=0.30.0,<1",
    "pydantic>=2.0,<3",
]

[project.scripts]
openclaw-tg-bridge = "openclaw_tg_bridge.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["openclaw_tg_bridge*"]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.23"]
